--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,3 +3,38 @@ body{
 	background-attachment: fixed;
 }
 
+.pageHeader{
+	
+	background-color: rgba( 0, 0, 0, .8);
+	height: 250px;
+	width: 80%;
+	color: #F7EFB0;
+	font-size: 5rem;
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+	line-height: 22rem;
+	border-radius: 11px;
+	margin-top: 3rem;
+}
+
+
+/* Components*/
+
+
+.chakraHolder{
+	width: 80%;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: white;
+	height: 1000px;
+
+}
+
+.chakraHolder img{
+	width: 100%;
+}
+
+
+
+
